package solidexercicio10.model;

public interface Posicionavel {
  int getX();
  int getY();
}
